Fix Checkstyle issues